// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer className is test_drawer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer test_drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="opacity:0;transition:opacity .3s"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer closable is false 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer destroyOnClose is true 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="opacity:0;transition:opacity .3s"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer getContainer return undefined 1`] = `<div />`;

exports[`Drawer getContainer return undefined 2`] = `
<div>
  <div
    class=""
  >
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open osui-drawer"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 400px;"
      >
        <div
          class="ant-drawer-content"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header-no-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                style="--scroll-bar: 0px;"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
            <div
              class="ant-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer have a footer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
          <div
            class="ant-drawer-footer"
          >
            Test Footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer have a title 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header"
          >
            <div
              class="ant-drawer-title"
            >
              Test Title
            </div>
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render correctly 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render top drawer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-top osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateY(-100%);-ms-transform:translateY(-100%);height:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Drawer style/drawerStyle/headerStyle/bodyStyle should work 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    style="background-color:#08c"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="background-color:#08c"
        >
          <div
            class="ant-drawer-header-no-title"
            style="background-color:#08c"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M224.266 171.66l287.77 287.83 288.52-288.532c14.513-14.513 38.043-14.513 52.557 0 13.183 13.184 14.512 34.056 3.339 48.738l-4.041 4.57-287.83 287.77 288.532 288.52c13.183 13.183 14.512 34.055 3.339 48.737l-4.041 4.57c-12.482 12.433-33.354 13.762-48.036 2.589l-4.57-4.041-287.77-287.83-288.52 288.532c-13.183 13.183-34.055 14.512-48.737 3.339l-4.57-4.041c-12.433-12.482-13.763-33.354-2.589-48.036l4.041-4.57 287.83-287.77-288.532-288.52c-13.183-13.183-14.513-34.055-3.339-48.737l4.041-4.57c12.482-12.433 33.354-13.763 48.036-2.589l4.57 4.041z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="ant-drawer-body"
            style="background-color:#08c"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer support closeIcon 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
              style="--scroll-bar:0px"
              type="button"
            >
              <span>
                close
              </span>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
